--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
                 <div class="col-12 col-lg-3 col-md-6">
                     <div class="card mb-4 text-white hot-card pt-3 pb-1 border-0 text-start">
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                        <span class="position-absolute top-0 end-0 translate-middle badge rounded-pill bg-danger">
                             HOT
                             <span class="visually-hidden">unread messages</span>
                         </span>
@@ -316,28 +316,25 @@
         <!-- faqs   -->
         <section class="container">
             <h1 class="d-flex justify-content-center mb-5 mt-5">Frequently Asked Questions</h1>
-            <div class="row">
-                <div class="col-lg-6 mx-auto">
+            <div class="row ">
+                <div class="col-lg-6">
                     <img class="img-fluid " src="images/people.png" alt="">
                 </div>
-                <div class="col-lg-6 my-auto">
+                <div class="col-lg-6">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Accordion Item #1
+                                    <strong>What’s the difference between event design and event planning?</strong>
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p>Event design and event planning work hand in hand to deliver a successful
+                                        event.Events by Knight offer tailor made events. This means we incorporate both
+                                        event design and event planning to create that perfect event.</p>
                                 </div>
                             </div>
                         </div>
@@ -345,18 +342,15 @@
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Accordion Item #2
+                                    <strong>How early do we need to start planning an event</strong>
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p>The time to plan events varies from a few weeks to years. If your event is small,
+                                        you can probably put it together in a month or two. A good rule of thumb for any
+                                        major event, from weddings to a company holiday party, is six months</p>
                                 </div>
                             </div>
                         </div>
@@ -364,7 +358,7 @@
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Accordion Item #3
+                                    <strong>What is your refund and cancellation policy?</strong>
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
@@ -379,6 +373,20 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    <strong>How do you keep budgets on track?</strong>
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -389,8 +397,8 @@
     </main>
 
     <footer class="bg-dark text-light mt-5">
-        <div class="d-flex justify-content-around align-items-center">
-            <div class="text-light d-flex pt-5 mt-5 ">
+        <div class="d-flex flex-column-reverse flex-md-row justify-content-around align-items-center">
+            <div class="text-light pt-5 mt-5 ">
                 <p>© 2022 Red Love Convention Center. All rights reserved</p>
             </div>
             <div class="mt-5 order-sm-1">
